--- a/config.ini
+++ b/config.ini
@@ -6,6 +6,7 @@
 ## Unky Login
 unky.username=Unk
 unky.password=devhabbos.net
+unky.canupdate=true
 
 ## MySQL Configuration
 db.hostname=localhost
@@ -19,16 +20,16 @@ db.pool.minsize=10
 db.pool.maxsize=250
 
 ## Game TCP/IP Configuration
-game.tcp.bindip=127.0.0.1
+game.tcp.bindip=25.77.81.250
 game.tcp.port=30004
 game.tcp.conlimit=100000
 game.tcp.conperip=200
 game.tcp.enablenagles=true
 
 ## MUS TCP/IP Configuration
-mus.tcp.bindip=127.0.0.1
+mus.tcp.bindip=25.77.81.250
 mus.tcp.port=30001
-mus.tcp.allowedaddr=127.0.0.1
+mus.tcp.allowedaddr=25.77.81.250
 
 ## Client configuration
 client.ping.enabled=1
