--- a/config.ini
+++ b/config.ini
@@ -6,7 +6,10 @@
 ## Unky Login
 unky.username=Unk
 unky.password=devhabbos.net
+
+## Unky Emulator Configuration
 unky.canupdate=true
+unky.timetospawnpokemon=2
 
 ## MySQL Configuration
 db.hostname=localhost
